# odoo-autoclocker

./: .gitignore  .pre-commit-config.yaml  README.md  cdk.json  pyproject.toml
app/: check_attendance.py  get_all_absences.py  get_calendar_holidays.py  handler.py  requirements.txt  user_config.py
stack/: app.py
