[tool.poetry]
name = "autoclocker"
version = "0.1.0"
description = ""
authors = ["vperez <vperez@teknei.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
aws-cdk-lib = "^2.173.4"
'aws-cdk.aws-lambda-python-alpha' = "^2.173.4"
constructs = "^10.4.2"

[tool.poetry.group.dev.dependencies]  # development dependencies
assertpy = "^1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.5.5"
pre-commit = "^3.8.0"
coverage = "^7.6.0"
mypy = "^1.13.0"
python-dotenv = "^1.0.1"
types-requests = "^2.32.0"

[tool.poetry.group.core.dependencies]  # core dependencies
python = ">=3.12,<4.0.0"
boto3 = "^1.34.151"
odoorpc = "^0.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
