[tool.poetry]
name = "autoclocker"
version = "0.1.0"
description = ""
authors = ["victorperezpiqueras <victorperezpiqueras@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
aws-cdk-lib = "^2.173.4"
'aws-cdk.aws-lambda-python-alpha' = "^2.173.4"
constructs = "^10.4.2"

[tool.poetry.group.dev.dependencies]  # development dependencies
ruff = "^0.5.5"
pre-commit = "^3.8.0"
mypy = "^1.13.0"

[tool.poetry.group.core.dependencies]  # core dependencies
python = ">=3.12,<4.0.0"
odoorpc = "^0.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
exclude = [
    "cdk\\.out",
    "\\.venv" # This is created in the pipelines
]
mypy_path = 'app'
explicit_package_bases = true

[tool.ruff]
target-version = "py312"
src = [".", "app"]
exclude = [
    "cdk.out",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "S", # flake8-bandit
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by formatter
]
